# AssetGuard

./: .gitignore  README.md  crontab.txt  env_sample  minimal_crontab.txt  pyproject.toml  run_pipeline.sh
soc_stack/: hydra_orchestrator.py
soc_stack/asset_engine/: asset_categorizer.py  asset_finder.py  asset_merger.py  asset_resolver.py
soc_stack/builders/: base_builder.py  snipe_builder.py  wazuh_builder.py  zabbix_builder.py
soc_stack/config/: categorization_rules.py  hydra_settings.py  mac_config.sample.py  ms365_service.py  network_config.py  network_config.sample.py  snipe_schema.py
soc_stack/debug/categorize_from_logs/: entra_categorize_from_logs.py  intune_categorize_from_logs.py  ms365_categorize_from_logs.py  nmap_categorize_from_logs.py  teams_categorize_from_logs.py
soc_stack/debug/checks/: check_checkbox_custom_fields.py  fix_checkbox_custom_fields.py
soc_stack/debug/tests/: inspect_snipe_data.py  test_api_connections.py  test_deduplication.py  test_entra_raw_fetch.py  test_failure_logger.py  test_get_intune_asset_details.py  test_hydra.py  test_intune_raw_fetch.py  test_ms365_api.py  (+12 more)
soc_stack/dispatchers/: base_dispatcher.py  snipe_dispatcher.py  wazuh_dispatcher.py  zabbix_dispatcher.py
soc_stack/loggers/: failure_logger.py  new_asset_logger.py  other_asset_logger.py  snipe_snapshotter.py
soc_stack/pipelines/: integration_pipeline.py
soc_stack/scanners/: entra_scanner.py  intune_scanner.py  ms365_aggregator.py  nmap_scanner.py  simple_nmap_scanner.py  teams_scanner.py
soc_stack/states/: snipe_state.py  wazuh_state.py  zabbix_state.py
(+25 files in other folders)
